# markfeyn

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  package-lock.json  package.json  properdocs.yml  pyproject.toml  tmp_verify_invisible.js
.agents/: elk-processor-evaluation.md  goal_memory.md  label-placement-module-split.md  milestone-3c-symmetric-unclassified-refinement.md  milestone-3d-label-placement.md  milestone-3e-symmetric-contact-star.md  overall_plan.md
docs/: development.md  examples.md  index.md  installation.md  syntax.md
docs/examples/: box-diagram.md  edges.md  electron-positron-annihilation.md  emission.md  from-the-literature.md  index.md  invisible-layout-edge.md  label-placement.md  layout-algorithms.md  layout.md  loops.md  manual-placement.md  meson-decay-and-mixing.md  mixed-vertex.md  published-papers.md  scalar-exchange.md  scattering-decays.md  symmetric-layout.md  symmetric-mode-without-process-roles.md  two-loop-regions.md  vertex-shapes.md  vertical-orientation.md  vertices.md
src/markfeyn/: __init__.py  core.py  mkdocs_plugin.py  properdocs_plugin.py
src/markfeyn/assets/: feynman-diagrams.js
src/markfeyn/renderer/: feynman-diagrams.js  layout-engine.js
src/mkdocs_feynman_diagrams/: plugin.py
src/properdocs_feynman_diagrams/: plugin.py
tests/: feynman-diagrams.test.js  feynman-visual-snapshots.test.js  test_docs_config.py  test_mkdocs_integration.py  test_plugin.py  test_properdocs_integration.py
tests/layout/fixtures/: milestone-four-contained-external.feynman  (+4 more)
(+72 files in other folders)
