[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markfeyn"
version = "0.1.0"
description = "Render simple Feynman diagram code blocks as native SVG in MkDocs and ProperDocs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "MarkFeyn contributors" }
]
keywords = ["mkdocs", "properdocs", "markdown", "feynman", "physics", "svg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "mkdocs>=1.5",
  "properdocs>=1.6.7",
]

[dependency-groups]
dev = [
  "mkdocs-material>=9.7.6",
  "pytest>=8",
]

[project.entry-points."properdocs.plugins"]
feynman-diagrams = "markfeyn.properdocs_plugin:FeynmanDiagramsPlugin"

[project.entry-points."mkdocs.plugins"]
feynman-diagrams = "markfeyn.mkdocs_plugin:FeynmanDiagramsPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
markfeyn = ["assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
